k8s/postgres-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  namespace: devops
spec:
  selector:
    app: postgres-user
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
